--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.75.1
+MYAPP_RELEASE_STORE_FILE=bittest.keystore
+MYAPP_RELEASE_KEY_ALIAS=bittest
+MYAPP_RELEASE_STORE_PASSWORD=bittest123
+MYAPP_RELEASE_KEY_PASSWORD=bittest123
